# mjpegw

./: README.md  mjpegw.c  mjpegw.h
.github/workflows/: c-compilation.yml
test/: CMakeLists.txt  test.c
